--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,86 @@
 .app-header {
   background-color: cornflowerblue;
+  color: white;
   text-align: center;
   padding: 1em 0 1em 0;
   margin: 0;
 }
 
 .bookshelf-heading {
-  margin: 1.5em 0 0 1em;
+  font-size: 1.6em;
+  margin: 1.5em 0 0 1.5em;
   color: cornflowerblue;
 }
 
 .book-list {
+  align-items: center;
   min-height: 16em;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 1em 0 1em 0;
-  border-bottom: solid 1px cornflowerblue;
+  width: 90vw;
+  margin: 1em auto 1em auto;
+  border-top: solid cornflowerblue 1px;
 }
 
 .book-item {
   margin: 1em 1em 1em 1em;
+  position: relative;
 }
 
-.custom-select {
+.open-search {
+  background-image: url('./icons/add.svg');
   background-color: royalblue;
-  width: 5em;
-  position: relative;
-  bottom: 1.5em;
-  left: 4.5em;
-  z-index: 1001;
+  display: block;
+  width: 2.7em;
+  height: 2.7em;
+  border-radius: 50%;
+  float: right;
+  cursor: pointer;
+  margin: 0 2em 1em 0;
+}
+
+.search-form {
+  width: 100vw;
+  height: 2.7em;
+}
+
+.search-input {
+  display: inline-block;
+  float: right;
+  height: 2.7em;
+  width: 92%;
+  /* padding: 0 0 0 1em; */
+}
+
+.back-arrow {
+  display: inline-block;
+  background-image: url('icons/arrow-back.svg');
+  background-repeat: no-repeat;
+  background-color: white;
+  width: 5%;
+  height: 2.7em;
+  margin: 0 0 0 0.5em;
+}
+
+.shelf-changer {
+  background-image: url('./icons/arrow-drop-down.svg');
+  /* background-color: royalblue; */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1.5em;
+  width: 3em;
+  height: 3em;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  bottom: -10px;
+  z-index: 1002;
+}
+
+.shelf-changer select {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
