Add styling to form elements

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@
   position: relative;
 }
 
+/*------------- Icon Styling ---------------*/
+
 .open-search {
   background-image: url('./icons/add.svg');
   background-color: royalblue;
@@ -42,26 +44,31 @@
 }
 
 .search-form {
-  width: 100vw;
+  width: 85vw;
   height: 2.7em;
+  display: flex;
+  align-content: center;
+  margin: 1em auto 0 auto;
 }
 
 .search-input {
-  display: inline-block;
-  float: right;
-  height: 2.7em;
-  width: 92%;
-  /* padding: 0 0 0 1em; */
+  height: 2.4em;
+  width: 100%;
+  padding: 0 0 0 0.5em;
+  border-radius: 0.2em;
+  border: 1px lightgrey solid
 }
 
 .back-arrow {
-  display: inline-block;
   background-image: url('icons/arrow-back.svg');
   background-repeat: no-repeat;
   background-color: white;
-  width: 5%;
+  width: 2.7em;
   height: 2.7em;
-  margin: 0 0 0 0.5em;
+  margin: 0 0.5em 0 0;
+  border-radius: 0.2em;
+  border: 1px lightgrey solid;
+  cursor: pointer;
 }
 
 .shelf-changer {
