--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
   width: 90vw;
   margin: 1em auto 1em auto;
