--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,24 @@
 }
 
 .book-item {
+  max-width: 128px;
   margin: 1em 1em 1em 1em;
+  /* position: relative; */
+}
+
+.book-cover {
   position: relative;
+}
+
+.book-title {
+  margin: 0.7em 0 0 0;
+  font-size: 0.7em;
+}
+
+.book-author {
+  margin: 0.4em 0 0 0;
+  font-size: 0.7em;
+  color: #8b8b8b;
 }
 
 .open-search {
@@ -76,7 +92,7 @@
 
 .shelf-changer {
   background-image: url('./icons/arrow-drop-down.svg');
-  /* background-color: royalblue; */
+  background-color: royalblue;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1.5em;
@@ -84,13 +100,17 @@
   height: 3em;
   border-radius: 50%;
   position: absolute;
-  right: 0px;
-  bottom: -10px;
-  z-index: 1002;
+  right: -8px;
+  bottom: -8px;
+  z-index: 1003;
 }
 
 .shelf-changer select {
+  opacity: 0;
   width: 100%;
   height: 100%;
-  cursor: pointer;
 }
+
+
+
+
