Fix: none option selected on book moves book to none shelf

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+.book-shelf:last-child {
+  display: none;
+}
+
 .bookshelf-heading {
   font-size: 1.6em;
   margin: 1.5em 0 0 1.5em;
